feat: implement role-based security for word of the day endpoints